// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array integration 1 1`] = `
{
  "posts": {
    "nodeType": "components.array.table",
    "keyName": "posts",
    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.object.fieldset",
        "keyName": "status",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.boolean.switch",
            "keyName": "isDraft",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      }
    ]
  }
}
`;

exports[`array integration 2 1`] = `
{
  "posts": {
    "nodeType": "components.array.table",
    "keyName": "posts",
    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "content",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "buttons",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.boolean.switch",
            "keyName": "isDraft",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "otherinfo",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.string.input",
            "keyName": "address",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          },
          {
            "nodeType": "components.string.input",
            "keyName": "introduction",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      }
    ]
  }
}
`;

exports[`complex schema integration 1 1`] = `
{
  "posts": {
    "nodeType": "components.array.table",
    "keyName": "posts",
    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.object.fieldset",
        "keyName": "status",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.dateTime.dateTime",
            "keyName": "createAt",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          },
          {
            "nodeType": "components.number.input",
            "keyName": "draft",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      },
      {
        "nodeType": "components.string.input",
        "keyName": "featureImage",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "pageProperty",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.number.input",
            "keyName": "onTop",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          },
          {
            "nodeType": "components.number.input",
            "keyName": "order",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "share",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.number.input",
            "keyName": "showShareBottom",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          },
          {
            "nodeType": "components.number.input",
            "keyName": "showGoodBottom",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "other",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.string.input",
            "keyName": "introduction",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          },
          {
            "nodeType": "components.geoPoint.default",
            "keyName": "position",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      }
    ]
  },
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "description",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.object.fieldset",
            "keyName": "info2",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "components.string.input",
                "keyName": "name2",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  },
  "popup": {
    "nodeType": "components.array.table",
    "keyName": "popup",
    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      }
    ]
  },
  "tab": {
    "nodeType": "components.array.tab",
    "keyName": "tab",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      }
    ]
  },
  "undefined": {
    "nodeType": "components.array.table",
    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      }
    ]
  }
}
`;

exports[`complex schema integration 2 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "nickname",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "test",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "thumbnail",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.string.input",
            "keyName": "imageName",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          },
          {
            "nodeType": "components.file.file",
            "keyName": "imageSrc",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "contactInfo",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.array.table",
            "keyName": "phones",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "components.string.select",
                "keyName": "type",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "components.string.input",
                "keyName": "value",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          },
          {
            "nodeType": "components.array.table",
            "keyName": "addresses",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "components.string.select",
                "keyName": "type",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "components.string.input",
                "keyName": "value",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          },
          {
            "nodeType": "components.array.table",
            "keyName": "emails",
            "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "components.string.select",
                "keyName": "type",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              },
              {
                "nodeType": "components.string.input",
                "keyName": "value",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object 
  integration 6 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info1",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.object.fieldset",
            "keyName": "info2",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "components.string.input",
                "keyName": "name3",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 1 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 2 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "nickname",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 3 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "nickname",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 4 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info1",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.string.input",
            "keyName": "name",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 5 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info1",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.string.input",
            "keyName": "name",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 7 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "description",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.object.fieldset",
            "keyName": "info2",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "components.string.input",
                "keyName": "name2",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 8 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "description",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.object.fieldset",
            "keyName": "info2",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "components.string.input",
                "keyName": "name2",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  },
  "info3": {
    "nodeType": "components.array.table",
    "keyName": "info3",
    "hocs": "[withTitleAndDescription,withRequest,relation,miniApp,withRoute,query,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.string.input",
        "keyName": "description",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      },
      {
        "nodeType": "components.object.fieldset",
        "keyName": "info",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
        "children": [
          {
            "nodeType": "components.object.fieldset",
            "keyName": "info2",
            "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
            "children": [
              {
                "nodeType": "components.string.input",
                "keyName": "name2",
                "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
              }
            ]
          }
        ]
      }
    ]
  }
}
`;

exports[`integration with qa-compiler, test object integration 9 1`] = `
{
  "info": {
    "nodeType": "components.object.fieldset",
    "keyName": "info",
    "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]",
    "children": [
      {
        "nodeType": "components.string.input",
        "keyName": "name",
        "hocs": "[withTitleAndDescription,withRequest,relation,withRoute,withQuery,routeMiniApp,connectId]"
      }
    ]
  }
}
`;
